--- a/question2/shop-backend-chart/values.yaml
+++ b/question2/shop-backend-chart/values.yaml
@@ -15,13 +15,10 @@ service:
   port: 80
 
 livenessProbe:
-  tcpSocket:
+  httpGet:
+    path: /
     port: 80
   initialDelaySeconds: 10
-  periodSeconds: 10
-  timeoutSeconds: 1
-  successThreshold: 1
-  failureThreshold: 3
 
 readinessProbe:
   httpGet:
@@ -29,8 +26,6 @@ readinessProbe:
     port: 80
   initialDelaySeconds: 10
   periodSeconds: 1
-  timeoutSeconds: 1
-  successThreshold: 1
   failureThreshold: 2
 
 autoscaling:
