--- a/questionb/backstage-azure-terraform-template/template.yaml
+++ b/questionb/backstage-azure-terraform-template/template.yaml
@@ -7,7 +7,7 @@ metadata:
   description: Provision Azure resources (Resource Group, Storage Account, Container) using Terraform
 spec:
   owner: user:guest
-  type: service
+  type: infrastructure
 
   # These parameters are used to generate the input form in the frontend, and are
   # used to gather input data for the execution of the template.
